fixed welcome alignment issues on rotated phone screens

--- a/mugsite/src/app/mughub/welcome/welcome-setup/welcome-setup-profile/welcome-setup-profile.component.css
+++ b/mugsite/src/app/mughub/welcome/welcome-setup/welcome-setup-profile/welcome-setup-profile.component.css
@@ -45,6 +45,16 @@
   cursor: pointer;
 }
 
+.dynamic-height {
+  height: 92vh;
+}
+
+@media (max-height: 450px) {
+  .dynamic-height {
+    height: 120vh;
+  }
+}
+
 :host ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
   height: 0 !important;
 }
