--- a/mugsite/src/app/mughub/welcome/welcome.component.css
+++ b/mugsite/src/app/mughub/welcome/welcome.component.css
@@ -4,7 +4,6 @@
   background-size: cover;
   color: white;
   font-family: 'Montserrat', sans-serif;
-  height: 100vh;
   width: 100%;
   padding: 30px;
 }
@@ -25,6 +24,8 @@
 }
 
 .welcome-hashtag {
+  position: absolute;
+  bottom: 0; 
   font-size: 16px;
   font-weight: 500;
 }
